# hicxx

./: .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/: dependabot.yml
.github/workflows/: codecov.yml  fuzzy-testing.yml  macos-ci.yml  ubuntu-ci.yml  windows-ci.yml
cmake/: CompilerWarnings.cmake  FetchTestDatasets.cmake  TestStdlibFeatures.cmake  Versioning.cmake
examples/: CMakeLists.txt  example.cpp  hicxx_dump.cpp
src/: CMakeLists.txt  cache_impl.hpp  file_stream_impl.hpp  hic_file_impl.hpp  hic_file_stream_impl.hpp  hic_footer_impl.hpp  hic_header_impl.hpp  hic_matrix_selector_impl.hpp  local_fstream_impl.hpp  matrix_zoom_data_impl.hpp  remote_fstream_impl.hpp
src/include/hicxx/: hicxx.hpp
src/include/hicxx/internal/: cache.hpp  common.hpp  hic_file_stream.hpp  hic_footer.hpp  hic_matrix_selector.hpp
src/include/straw/: straw.h  straw.hpp
src/include/straw/internal/: common.h  common.hpp  filestream.hpp  hic_file_stream.hpp  hic_footer.hpp  hic_header.hpp  hic_matrix_selector.hpp
test/: CMakeLists.txt  filestream_local_test.cpp  filestream_remote_test.cpp  hic_file_stream_test.cpp  hic_file_test.cpp  matrix_zoom_data_test.cpp
test/data/: README.md
test/scripts/: fuzzy_test.py
